2007-01-25  Peter Johanson  <peter@peterjohanson.com>

	* configure.in:
	
	Bump to using intltool 0.35.0 or newer, and new style po/LINGUAS
	support. Fixes #358478.

2007-01-25  Peter Johanson  <peter@peterjohanson.com>

	* TODO: Remove item about switching to Gtk about dialog.

2007-01-25  Peter Johanson  <peter@peterjohanson.com>

	* src/About.cs:

	Switch to using Gtk.AboutDialog. Patch from Tamara Roberson
	<tamara.roberson@gmail.com>, with some small tweaks by me. Fixes
	#355035.

2007-01-25  Peter Johanson  <peter@peterjohanson.com>

	* data/glade/SkipToWindow.glade:
	* src/SkipToWindow.cs:

	Make Left and Right move the slider in the Skip To window. Fixes
	#379478.

2007-01-25  Peter Johanson  <peter@peterjohanson.com>

	* configure.in: Fix breakage introduced when removing the gstreamer
	0.8 support.

2007-01-24  Peter Johanson  <peter@peterjohanson.com>

	* configure.in:
	* deps/dbus-sharp/Makefile.in:
	* libmuine/Makefile.am:
	* libmuine/player-gst-0.8.c:

	Remove the old Gstreamer 0.8 support, and bump to 0.8.7.99 post
	release.

2007-01-23  Alp Toker  <alp@atoker.com>

	* data/muine-dbus.pc.in: Remove old dbus-sharp from Requires.

2007-01-21  Peter Johanson  <peter@peterjohanson.com>

	* NEWS:
	* configure.in:

	Update with latest news, and bump to 0.8.7 for a new release.

2007-01-21  Peter Johanson  <peter@peterjohanson.com>

	* plugins:
	* src:
	* deps:
	* deps/dbus-sharp-glib:
	* deps/dbus-sharp:
	* libmuine:
	* libmuine/id3-vfs:

	Add a bunch of items to svn:ignore.

2007-01-20  Peter Johanson  <peter@peterjohanson.com>

	* configure.in:

	Depend on Gtk# 2.6.

	* TODO:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	* src/CellRendererText.cs:
	* src/Makefile.am:
	* src/PlaylistWindow.cs: 

	Remove our CellRendererText hack, and use the real
	CellRendererText.Ellipsize property.

2007-01-20  Peter Johanson  <peter@peterjohanson.com>

	* TODO: Add item about using Gtk.StatusIcon eventually, and clean up a