@@ -1,5 +1,14 @@
 2007-01-25  Peter Johanson  <peter@peterjohanson.com>
 
+	* libmuine/metadata.c: (FLAC_read_callback),
+	(assign_metadata_flac):
+
+	Update to include FLAC 1.1.3 compatibility (Note: this requires a
+	gst-plugins-good patched with the compatibility as well in order to
+	work). Fixes #400206.
+
+2007-01-25  Peter Johanson  <peter@peterjohanson.com>
+
 	* configure.in:
 	
 	Bump to using intltool 0.35.0 or newer, and new style po/LINGUAS
